--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,8 @@ fill: var(--primery-text-color);
 }
 
 /* title options (налаштування назви) */
-.our-features-title {
+.our-features-title,
+.img-label {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -367,7 +368,7 @@ fill: var(--primery-text-color);
 }
 
 /* paragraph options (налаштування параграфу) */
-.our-features-text {
+.our-features-text{
     color: var(--paragraph-tex-color);
     font-size: 14px;
     line-height: 1.71;
@@ -393,6 +394,26 @@ fill: var(--primery-text-color);
 
 .img-section-picture {
     display: block;
+}
+
+.img-section-group {
+    position: relative;
+}
+
+.img-position > .img-label {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+}
+
+.img-label{
+    color: var(--additional-text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(47, 48, 58, 0.8);
+    height: 70px;
+    width: 370px;
 }
 
 /*  налаштування списку (list options) */
