--- a/css/styles.css
+++ b/css/styles.css
@@ -621,6 +621,35 @@ fill: var(--additional-text-color);
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.image-portfolio{
+    position: relative;
+    overflow: hidden;
+}
+
+.image-portfolio:hover .image-overlay{
+transform: translatex(0);
+}
+
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    padding: 63px 24px;
+    font-family: sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    color: var(--additional-text-color);
+    background-color:  rgba(33, 150, 243, 0.9);
+
+    transform: translateY(100%);
+    transition: transform 250ms ease;
+}
+
+
+
 .porfolio-link-img {
     display: block;
 }
