--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,11 @@ ul,ol{
     margin: 0 auto;
 }
 
+.hover-transition {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /* .active{} */
 
 /* ---------------------------------- LOGO ----------------------------------- */
