--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,12 @@ body {
     margin: -1px;
 }
 
+.is-hidden{
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
 /* links option (налаштування для посилать) */
 .link-options {
     text-decoration: none;
@@ -348,11 +354,39 @@ margin-right: 10px;
     border-radius: 4px;
     border-style: none;
     /* position */
+    position: relative;
+    overflow: hidden;
 }
 .hero-button:hover,
 .hero-button:focus{
     background: #188CE8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250mc cubic-bezier(0.4, 0, 0.2, 1), visibility 250mc cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 10;    
+    justify-content: center;
+    align-content: center;
+}
+
+.modal-window {
+    position: absolute;
+    top: 0%;
+    
+    width: 528px;
+    height: 581px;
+
+    background-color: var(--additional-text-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 }
 
