--- a/css/styles.css
+++ b/css/styles.css
@@ -368,26 +368,38 @@ margin-right: 10px;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.2);
-    opacity: 1;
-    transition: opacity 250mc cubic-bezier(0.4, 0, 0.2, 1), visibility 250mc cubic-bezier(0.4, 0, 0.2, 1);
-    z-index: 10;    
-    justify-content: center;
-    align-content: center;
+    transition: opacity 500ms cubic-bezier(0.11, 0, 0.5, 0) 0s, visibility 500ms cubic-bezier(0.11, 0, 0.5, 0) 0s;
+    z-index: 10;
 }
 
 .modal-window {
     position: absolute;
-    top: 0%;
-    
+    top: calc((100% - 581px) / 2);
+    left: calc((100% - 528px) / 2);
     width: 528px;
     height: 581px;
 
     background-color: var(--additional-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+}
+
+.close-button{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--additional-text-color);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+
+    padding: 0;
+
 }
 
 /* -==================== our-features (текст під банером) ==================== */
